Fixing zoom on mobile devices

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -32,9 +32,8 @@ body {
 
 header {
     background-color: #f9c80e;
-    text-align: left;
+    text-align: center;
     display: flex;
-    /*align-items: stretch;*/
 }
 
 .banner {
